--- a/Mini Calculatrice.html
+++ b/Mini Calculatrice.html
@@ -12,52 +12,31 @@
     <div class="container flex">
         <div class="afficheur">
             <div class="rslt">rslt</div>
-            <div class="text">text</div>
+            <div class="text"></div>
         </div>
         <div class="touche grid">
-            <div class="btn">1</div>
-            <div class="btn">2</div>
-            <div class="btn">3</div>
-            <div class="btn">4</div>
-            <div class="btn">5</div>
-            <div class="btn">6</div>
-            <div class="btn">7</div>
-            <div class="btn">8</div>
-            <div class="btn">9</div>
-            <div class="btn">0</div>
-            <div class="btn">.</div>
-            <div class="btn">*</div>
-            <div class="btn">+</div>
-            <div class="btn">=</div>
-            <div class="btn">/</div>
-            <div class="btn">-</div>
-            <div class="btn">AC</div>
-            <div class="btn">DEL</div>
-            <div class="btn">%</div>
-            <div class="btn">OK</div>
+            <button class="btn" alt="1">1</button>
+            <button class="btn" alt="2">2</button>
+            <button class="btn" alt="3">3</button>
+            <button class="btn" alt="4">4</button>
+            <button class="btn" alt="5">5</button>
+            <button class="btn" alt="6">6</button>
+            <button class="btn" alt="7">7</button>
+            <button class="btn" alt="8">8</button>
+            <button class="btn" alt="9">9</button>
+            <button class="btn" alt="0">0</button>
+            <button class="btn" alt=".">.</button>
+            <button class="btn" alt="*">*</button>
+            <button class="btn" alt="+">+</button>
+            <button class="btn" alt="=">=</button>
+            <button class="btn" alt="/">/</button>
+            <button class="btn" alt="-">-</button>
+            <button class="btn" alt="AC">AC</button>
+            <button class="btn" alt="DEL">DEL</button>
+            <button class="btn" alt="%">%</button>
+            <button class="btn" alt="OK">OK</button>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="/Mini Calculatrice.js"></script>
     
 </body>
